# oxi-talib

./: Cargo.toml  LICENSE  README.md  README.ru.md
.github/workflows/: rust.yaml
scr/cdl/api/: mod.rs
scr/cdl/engines/: internal.rs
scr/cdl/engines/talib/: engine.rs
src/: lib.rs
src/cdl/: mod.rs
src/cdl/api/: candles.rs  cdl.rs  error.rs  patterns.rs  settings.rs  signal.rs
src/cdl/engines/: mod.rs
src/cdl/engines/talib/: engine.rs  functions.rs  mod.rs
