[package]
name = "oxi-talib"
version = "0.1.0"
edition = "2021"
authors = ["Sergey Knigin <sbooker@mail.ru>"]
license = "MIT"
description = "A Rust library for candlestick pattern recognition."
repository = "https://github.com/sbooker/oxi-talib"
readme = "README.md"
keywords = ["finance", "trading", "technical-analysis", "ta-lib", "candlestick"]
categories = ["finance"]

[dependencies]
ta-lib-wrapper = "0.2.0"